@@ -1,0 +1,2 @@
+load("another-label-error.rda")
+ez.glm("id", "corr", d.in, between = "cond", within = c("type", "inference"))
