@@ -41,5 +41,5 @@ Authors@R: c(person(given="Henrik", family="Singmann",
     role=c("ctb")), person(given="John", family="Fox",
     role=c("ctb")), person(given="Michael A.", family="Lawrence",
     role=c("ctb")))
-Version: 0.10-110
-Date: 2014-05-15
+Version: 0.10-111
+Date: 2014-05-21
