@@ -7,7 +7,7 @@ Analysis of Factorial Experiments.
 }
 \details{
 \tabular{ll}{ Package: \tab afex\cr Type: \tab Package\cr
-Version: \tab 0.10-110\cr Date: \tab 2014-05-15\cr Depends:
+Version: \tab 0.10-111\cr Date: \tab 2014-05-21\cr Depends:
 \tab R (>= 3.0.0), car, lme4 (>= 1.0.5), pbkrtest (>=
 0.3-6), reshape2\cr Encoding: \tab latin1\cr License: \tab
 GPL (>=3)\cr URL: \tab
